--- a/index.html
+++ b/index.html
@@ -47,14 +47,33 @@
     <img src="https://i.pinimg.com/736x/2b/1f/68/2b1f6898a087df1df06b9564ff097f53.jpg" alt="BTS">
     <img src="https://ichef.bbci.co.uk/ace/standard/976/cpsprodpb/117E5/production/_115635617_gettyimages-1207828603.jpg" alt="Blackpink">
     <img src="https://kpopping.com/documents/4a/3/1200/EXO-K-fullPicture(1).webp" alt="EXO">
+    <img src="https://i1.sndcdn.com/artworks-bJq9khVs2cfoIgjc-zcty5w-t500x500.jpg" alt="">
+    <img src="https://i.pinimg.com/474x/fa/e5/80/fae5801d34e27dd9f5f259f760a5829a.jpg" alt="">
+    <img src="https://wimg.heraldcorp.com/upcontent/ncms/2018/07/12/201807120944057900807_20180712100004_01.jpg" alt="">
+    <img src="https://i.pinimg.com/236x/34/40/c8/3440c82d2214bda5e66994477fc2d761.jpg" alt="">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgqXG7YBWxH2LZDFW0RzfShjDVnPXZpESWwA&s" alt="">
   </div>
 </section>
 
 </main>
+<section>
+<!-- FORM (REQUIRED) -->
+  <section>
+    <h2>Fan Registration Form</h2>
+    <form>
+      <label for="name">Name:</label><br>
+      <input type="text" id="name" name="name" required><br><br>
+
+      <label for="group">Favorite Group:</label><br>
+      <input type="text" id="group" name="group"><br><br>
+
+      <button type="submit">Submit</button>
+    </form>
+  </section>
 
 <footer>
   <p>&copy; 2026 K-pop World</p>
 </footer>
-
+<script src="./script.js"></script>
 </body>
 </html>
