modified:   exo.html

--- a/exo.html
+++ b/exo.html
@@ -27,7 +27,7 @@
     <h2>Achievements</h2>
     <ul>
       <li>Millions of album sales</li>
-      <li>Popular songs like "Growl" and "Love Shot"</li>
+      <li>Popular songs like "Growl" and "Love Shot."</li>
     </ul>
   </section>
 </main>
