--- a/blackpink.html
+++ b/blackpink.html
@@ -21,6 +21,9 @@
   <section>
     <h2>About BLACKPINK</h2>
     <p>BLACKPINK debuted in 2016 under YG Entertainment and became a global girl group icon.</p>
+    <p>BLACKPINK consists of Jisoo, Jennie, Rosé, and Lisa. They are known for their powerful vocals, dynamic performances, and fashion influence. BLACKPINK has achieved global success with hits like "Ddu-Du Ddu-Du," "Kill This Love," and "How You Like That." They have also made history as the first K-pop girl group to perform at Coachella in 2019, further solidifying their status as global superstars. With billions of YouTube views and a massive international fanbase known as BLINKS, BLACKPINK continues to dominate the music industry and inspire fans worldwide with their music, style, and empowering messages.</p>
+    <p>For more information on BLACKPINK's achievements and impact, you can visit their official website or check out their latest news and updates on social media platforms.</p>  
+  
   </section>
 
   <section>
@@ -31,9 +34,11 @@
     </ul>
   </section>
 </main>
-
-<footer>
-  <p>&copy; 2026 K-pop World</p>
+<img src="https://i.pinimg.com/564x/a7/e6/10/a7e6105d3ae46c6c4f98ae657c3781ca.jpg" alt="" height="200px">
+<img src="https://media.vogue.co.uk/photos/5fcf4b19cb233b84068b68b1/2:3/w_2560%2Cc_limit/121581555_269701647628757_1009798624315687195_n.jpg" alt="" height="200px">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ4t69uJ9WT4_aSXRsA_KkdFdPJNqtqJVMq_g&s" alt=""height="200px">
+<img src="https://img.joomcdn.net/008013880603a72eea9373f175a4e726cd394d8f_original.jpeg" alt="" height="200px">
+<a href="https://www.billboard.com/music/pop/blackpink-historic-headliner-coachella-2023-recap-1235302813/"> Billboard</a>
 </footer>
 
 </body>
