--- a/bts.html
+++ b/bts.html
@@ -21,6 +21,12 @@
   <section>
     <h2>About BTS</h2>
     <p>BTS debuted in 2013 under BigHit Entertainment and is known for meaningful lyrics and global influence.</p>
+      <p>BTS Comprised of RM, Jin, SUGA, j-hope, Jimin, V, and Jung Kook, they are known for self-produced music, intense performances, and massive social impact. The group is set to reunite for a new album and world tour in spring 2026 following the completion of mandatory military service in June 2025. </p>
+      <p>They have achieved global success with multiple Billboard Hot 100 #1 hits, including "Dynamite," "Butter," and "Permission to Dance." BTS has also made history with their speeches at the United Nations, advocating for youth empowerment and social issues. Their dedicated fanbase, known as ARMY, has played a crucial role in their success and global influence.</p>
+      <p>As of 2026, BTS continues to be a dominant force in the music industry, breaking records and inspiring millions worldwide with their music, message, and philanthropy. They are not only musicians but also cultural icons, known for their positive impact on mental health awareness, social justice, and global unity. With their upcoming album and world tour, BTS is set to further solidify their legacy as one of the most influential and successful music groups in history.</p>
+      <p>For more information on BTS's achievements and impact, you can visit their official website or check out their latest news and updates on social media platforms.</P>       
+  
+    </p>
   </section>
 
   <section>
@@ -32,7 +38,13 @@
     </ul>
   </section>
 </main>
-
+<img src="https://hips.hearstapps.com/hmg-prod/images/performs-onstage-during-the-2019-billboard-music-awards-at-news-photo-1591986633.jpg?crop=1xw:0.8449xh;0.0994xw,0.115xh" alt="" height="200px">
+<img src="https://i.pinimg.com/474x/d0/cb/b7/d0cbb73bd82654cf102a206e7d95a33e.jpg" alt=""height="200px">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/05/BTS_at_the_31st_Golden_Disk_Awards.jpg/1280px-BTS_at_the_31st_Golden_Disk_Awards.jpg" alt=""height="200px">
+<a href="https://www.bbc.com/news/entertainment-arts-39998511">awards</a>
+<a href="https://www.rappler.com/world/global-affairs/bts-remarks-sdg-moment-unga-2021/"></a>
+<img src="https://www.rappler.com/tachyon/2021/09/2021-09-20T133829Z_1415597143_RC2OTP9IEMQZ_RTRMADP_3_UN-ASSEMBLY.jpg" alt=""height="200px">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT4eoAjSKjzMDHXr5U2pd0zt_bsNzr9bB9tTQ&s" alt="">
 <footer>
   <p>&copy; 2026 K-pop World</p>
 </footer>
