--- a/index.html
+++ b/index.html
@@ -42,22 +42,32 @@
 </section>
 
 <section id="gallery">
+  <div class="search-container">
+    <input type="text" id="searchInput" placeholder="Search for images...">
+    <button id="searchButton">Search</button>
+  </div>
   <h2>Gallery</h2>
   <div class="gallery">
     <img src="https://i.pinimg.com/736x/2b/1f/68/2b1f6898a087df1df06b9564ff097f53.jpg" alt="BTS">
-    <img src="https://ichef.bbci.co.uk/ace/standard/976/cpsprodpb/117E5/production/_115635617_gettyimages-1207828603.jpg" alt="Blackpink">
-    <img src="https://kpopping.com/documents/4a/3/1200/EXO-K-fullPicture(1).webp" alt="EXO">
-    <img src="https://i1.sndcdn.com/artworks-bJq9khVs2cfoIgjc-zcty5w-t500x500.jpg" alt="">
-    <img src="https://i.pinimg.com/474x/fa/e5/80/fae5801d34e27dd9f5f259f760a5829a.jpg" alt="">
-    <img src="https://wimg.heraldcorp.com/upcontent/ncms/2018/07/12/201807120944057900807_20180712100004_01.jpg" alt="">
-    <img src="https://i.pinimg.com/236x/34/40/c8/3440c82d2214bda5e66994477fc2d761.jpg" alt="">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgqXG7YBWxH2LZDFW0RzfShjDVnPXZpESWwA&s" alt="">
+    <img src="https://ichef.bbci.co.uk/ace/standard/976/cpsprodpb/117E5/production/_115635617_gettyimages-1207828603.jpg" alt="BTs">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTG3K0Oe8GUisw7_fEIitz4wxB-PQ0SeDXAJA&s" alt="EXO">
+    <img src="https://i1.sndcdn.com/artworks-bJq9khVs2cfoIgjc-zcty5w-t500x500.jpg" alt="skz">
+    <img src="https://i.pinimg.com/474x/fa/e5/80/fae5801d34e27dd9f5f259f760a5829a.jpg" alt="Blackpink">
+    <img src="https://wimg.heraldcorp.com/upcontent/ncms/2018/07/12/201807120944057900807_20180712100004_01.jpg" alt="EXO">
+    <img src="https://i.pinimg.com/236x/34/40/c8/3440c82d2214bda5e66994477fc2d761.jpg" alt="TXt">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgqXG7YBWxH2LZDFW0RzfShjDVnPXZpESWwA&s" alt="Chen">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmhaQaJ3__7D-vdgjvlnvhu7-NkvbXj1JWfQ&s" alt="Enhypen"height="200px">
+    <img src="https://cdn.shopify.com/s/files/1/0469/3927/5428/files/Bildschirmfoto_2023-08-09_um_11.26.36.png?v=1691573210" alt="ntc">
+    <img src="https://seoul-mate.eu/cdn/shop/collections/shinee-729577.webp?v=1676385713" alt="Shinee" height="200px">
+    <img src="https://i.pinimg.com/736x/a3/bd/8e/a3bd8e20f61bb2d604f2dee125f1d0b0.jpg" alt="Astro"height="200px">
+    <img src="https://kpopworld.com/storage/6HMANu3OggRgIUP2p7ej5nNgO8lSjW549rsKoQcx.jpg" alt="Kard" height="200px">
+<img src="https://cdn-images.dzcdn.net/images/cover/48fdf03f2577761844fc259090ae1f66/0x1900-000000-80-0-0.jpg" alt="Hyollng" height="200px">
   </div>
 </section>
 
 </main>
-<section>
 <!-- FORM (REQUIRED) -->
+
   <section>
     <h2>Fan Registration Form</h2>
     <form>
