--- a/blackpink.html
+++ b/blackpink.html
@@ -39,6 +39,8 @@
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ4t69uJ9WT4_aSXRsA_KkdFdPJNqtqJVMq_g&s" alt=""height="200px">
 <img src="https://img.joomcdn.net/008013880603a72eea9373f175a4e726cd394d8f_original.jpeg" alt="" height="200px">
 <a href="https://www.billboard.com/music/pop/blackpink-historic-headliner-coachella-2023-recap-1235302813/"> Billboard</a>
+foooter>
+  <p>&copy; 2026 K-pop World</p>
 </footer>
 
 </body>
