--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 <section id="info">
   <h2>K-pop: A Global Music Phenomenon</h2>
   <p>K-pop originated in South Korea and blends music, dance, fashion, and visuals.</p>
+  <p>It has become a global phenomenon, with millions of fans worldwide and significant cultural impact.</p>
+  <p>K-pop groups often have dedicated fanbases, known for their passion and loyalty.</p>
+  <p>For more information on K-pop's history and influence, you can visit the official K-pop website or check out documentaries and articles on the genre.</p>
 </section>
 
 <section id="groups">
